--- a/src/assets/styles/cmps/_nav.scss
+++ b/src/assets/styles/cmps/_nav.scss
@@ -51,7 +51,7 @@ nav {
         visibility: hidden;
         transition: all .5s;
         z-index: 1;
-        background: $clr-light;
+        background: $clr-bg-variant;
         color: $clr-bg;
         opacity: 0;
 
