--- a/src/assets/styles/mq/mq.scss
+++ b/src/assets/styles/mq/mq.scss
@@ -4,9 +4,9 @@
         width: $container-width-md;
     }
 
-    section {
-        margin-top: 6rem;
-    }
+    // section {
+    //     margin-top: 6rem;
+    // }
 
     .about-container {
         grid-template-columns: 1fr;
